--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -14,10 +14,10 @@ spring.mvc.view.suffix=.jsp
 #spring.datasource.username = scott	
 #spring.datasource.password =	 tiger
 
-# Mybatis DB 접속(mysql)
-spring.datasource.url = jdbc:mysql://localhost:3306/world
-spring.datasource.username = root
-spring.datasource.password =	 1234
+# Mybatis DB 접속(mysql의 aws서버 접속)
+spring.datasource.url = jdbc:mysql://mysql.crnzjkopbfng.ap-northeast-2.rds.amazonaws.com:3306/world
+spring.datasource.username = admin
+spring.datasource.password =	 qwer1234
 
 # DB와 JAVA의 필드명 mapping을 위한 설정 : 자바는 언더바로 객체명을 짓지 않기 때문에 DB와 자바 필드명이 다를 때 맵핑을 잘 되게끔 하려고 이와 같은 설청을 함
 mybatis.configuration.map-underscore-to-camel-case=true
