--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,8 @@ mybatis.configuration.map-underscore-to-camel-case=true
 # 상세로그 출력 : 다이나믹 쿼리문이 잘 완성이 되었나 콘솔창에서 보기 위함 (trace, debug, warn, info, error, fatal)
 logging.level.com.example.mapper=trace
 
+#Security ID/PW 설정
+spring.security.user.name=python
+spring.security.user.password=1234
+
+
