--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'war'
 	id 'eclipse-wtp'
-	id 'org.springframework.boot' version '3.1.4'
+	id 'org.springframework.boot' version '3.1.5'
 	id 'io.spring.dependency-management' version '1.1.3'
 }
 
@@ -36,6 +36,7 @@ eclipse {
 
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
 	compileOnly 'org.projectlombok:lombok'
@@ -57,6 +58,9 @@ dependencies {
     implementation 'org.webjars:webjars-locator-core'
     implementation 'org.webjars:bootstrap:5.2.3'
     implementation 'org.webjars:jquery:3.7.1'
+    
+    // Spring Security - tag라이브러리를 쓰기 위함
+    implementation group: 'org.springframework.security', name: 'spring-security-taglibs', version: '6.0.3'
 }
 
 tasks.named('test') {
